# CSOPESY-OS-Emulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
csopesy-fcfs/: CMakeLists.txt  DEVELOPER.md  HANDOFF.md  README.txt
csopesy-fcfs/include/: CPUWorker.h  Config.h  Console.h  ICommand.h  PrintCommand.h  Process.h
csopesy-fcfs/src/: CPUWorker.cpp  Console.cpp  FCFSScheduler.cpp  PrintCommand.cpp  Process.cpp  main.cpp
csopesy-mo1/: .gitignore  CMakeLists.txt  CMakePresets.json  PPT_CONTENT.md  README.txt  STATE.md  config.txt
csopesy-mo1/include/: AddCommand.h  Config.h  Console.h  DeclareCommand.h  FCFSScheduler.h  ForCommand.h  ICommand.h  IScheduler.h  Operand.h  PrintCommand.h  Process.h  ProcessGenerator.h  RRScheduler.h  SchedulerBase.h  Screen.h  SleepCommand.h  SubtractCommand.h  SystemConfig.h
csopesy-mo1/include/commands/: DeclareCommand.h  ForCommand.h  ICommand.h  Operand.h  PrintCommand.h  SleepCommand.h  SubtractCommand.h
csopesy-mo1/include/console/: Console.h  MainMenuScreen.h  ProcessScreen.h  ScreenManager.h
csopesy-mo1/include/process/: CPUWorker.h  ProcessGenerator.h  SymbolTable.h
csopesy-mo1/include/scheduler/: FCFSScheduler.h  IScheduler.h
csopesy-mo1/src/: AddCommand.cpp  CPUWorker.cpp  Console.cpp  DeclareCommand.cpp  FCFSScheduler.cpp  ForCommand.cpp  Operand.cpp  PrintCommand.cpp  Process.cpp  ProcessGenerator.cpp  ProcessScreen.cpp  RRScheduler.cpp  SchedulerBase.cpp  SleepCommand.cpp  SubtractCommand.cpp  SystemConfig.cpp  main.cpp
csopesy-mo1/src/commands/: AddCommand.cpp  DeclareCommand.cpp  ForCommand.cpp  Operand.cpp  PrintCommand.cpp  SubtractCommand.cpp
csopesy-mo1/src/config/: SystemConfig.cpp
csopesy-mo1/src/console/: Console.cpp  MainMenuScreen.cpp  ProcessScreen.cpp  ScreenManager.cpp
csopesy-mo1/src/process/: CPUWorker.cpp  Process.cpp  ProcessGenerator.cpp
csopesy-mo1/src/scheduler/: FCFSScheduler.cpp  RRScheduler.cpp  SchedulerBase.cpp
csopesy-mo1/testcases/: tc1_config.txt  tc2_config.txt  tc3_config.txt  tc5_config_mock.txt  tc6_config.txt  tc6_config_mock.txt  tc7_config_mock.txt  testcases.md
docs/: ARCHITECTURE.md  COMPONENTS.md  DEVELOPMENT_PLAN.md  RUNNING.md  diagrams.html
src/: main.cpp
src/apps/: FileExplorerApp.cpp  FileExplorerApp.h  SystemInfoApp.cpp  SystemInfoApp.h  TaskManager.cpp  TaskManager.h
src/compositor/: Compositor.cpp  Compositor.h  Window.h  WindowManager.cpp  WindowManager.h
src/core/: Application.cpp  Application.h  Clock.cpp  Clock.h  Texture.cpp  Texture.h  Theme.cpp  Theme.h
src/shell/: BootSequence.cpp  BootSequence.h  Desktop.cpp  Desktop.h  Taskbar.cpp  Taskbar.h
